# linux_proj_hw

./: Makefile.am  README.md  configure.ac
src/: Makefile.am  func.c  func.h  main.c
