SUBDIRS = src

clean-all:
	$(MAKE) uninstall
	$(MAKE) maintainer-clean
	rm -rf $(DESTDIR)$(bindir)/gtu-demo
	rm -rf $(DESTDIR)$(includedir)/header.h
	rm -rf $(top_builddir)/src/Makefile.in
	rm -rf $(top_builddir)/src/*.o
	rm -rf $(top_builddir)/src/gtu-demo
	rm -rf $(top_builddir)/Makefile
	rm -rf $(top_builddir)/Makefile.in
	rm -rf $(top_builddir)/aclocal.m4
	rm -rf $(top_builddir)/autom4te.cache/
	rm -rf $(top_builddir)/config.h
	rm -rf $(top_builddir)/config.h.in
	rm -rf $(top_builddir)/config.log
	rm -rf $(top_builddir)/config.status
	rm -rf $(top_builddir)/configure
	rm -rf $(top_builddir)/install-sh
	rm -rf $(top_builddir)/missing
	rm -rf $(top_builddir)/depcomp
	rm -rf $(top_builddir)/compile
	rm -rf $(top_builddir)/stamp-h1
	rm -rf $(top_builddir)/.deps/
	rm -rf $(top_builddir)/src/.deps/
	rm -rf $(top_builddir)/*.tar.gz
